Integrate ADV RESEARCH

--- a/env.example
+++ b/env.example
@@ -12,4 +12,8 @@ NEXT_PUBLIC_APPWRITE_DOMAINS_COLLECTION_ID=domains
 # External APIs (for later tasks)
 TAVILY_API_KEY=your_tavily_api_key_here
 KEYWORDS_AI_API_KEY=your_keywords_ai_api_key_here
-MEM0_API_KEY=your_mem0_api_key_here 
+MEM0_API_KEY=your_mem0_api_key_here
+
+# Research Agent APIs
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+SERPER_API_KEY=your_serper_api_key_here 
