--- a/package.json
+++ b/package.json
@@ -21,28 +21,30 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "appwrite": "^13.0.0",
-    "node-appwrite": "^13.0.0",
-    "dotenv": "^16.3.0",
+    "@headlessui/react": "^2.2.4",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
+    "appwrite": "^13.0.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "lucide-react": "^0.292.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "clsx": "^2.1.1",
+    "dotenv": "^16.3.0",
+    "framer-motion": "^12.18.1",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.0",
+    "node-appwrite": "^13.0.0",
+    "postcss": "^8.4.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
     "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.0"
+    "@tailwindcss/typography": "^0.5.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0"
   }
-} 
+}
