--- a/env.example
+++ b/env.example
@@ -16,4 +16,8 @@ MEM0_API_KEY=your_mem0_api_key_here
 
 # Research Agent APIs
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
-SERPER_API_KEY=your_serper_api_key_here 
+SERPER_API_KEY=your_serper_api_key_here
+
+# CopilotKit Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+NEXT_PUBLIC_COPILOTKIT_PUBLIC_API_KEY=your_copilotkit_public_api_key_here 
