--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "intelai-competitive-intelligence",
+  "name": "spyce-intelligence",
   "version": "1.0.0",
-  "description": "AI-powered competitive intelligence research assistant",
+  "description": "Spyce - Advanced competitive intelligence platform powered by AI",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
@@ -21,6 +21,11 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@copilotkit/react-core": "^1.9.1",
+    "@copilotkit/react-textarea": "^1.9.1",
+    "@copilotkit/react-ui": "^1.9.1",
+    "@copilotkit/runtime": "^1.9.1",
+    "@copilotkit/shared": "^1.9.1",
     "@headlessui/react": "^2.2.4",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
